syntax = "proto3";

import "Common.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

package Wealth.BuildingBlocks.Application;

message StockBoughtIntegrationEvent {
  PortfolioIdProto portfolio_id = 1;
  InstrumentIdProto instrument_id = 2;
  MoneyProto total_price = 3;
  int32 quantity = 4;
}

message BondBoughtIntegrationEvent {
  PortfolioIdProto portfolio_id = 1;
  InstrumentIdProto instrument_id = 2;
  MoneyProto total_price = 3;
  int32 quantity = 4;
}

message BondCouponChangedIntegrationEvent {
  InstrumentIdProto instrument_id = 1;
  ISINProto ISIN = 2;
  MoneyProto new_coupon = 3;
}

message StockDividendChangedIntegrationEvent {
  InstrumentIdProto instrument_id = 1;
  ISINProto ISIN = 2;
  MoneyProto new_dividend = 3;
}

message InstrumentPriceChangedIntegrationEvent {
  InstrumentIdProto instrument_id = 1;
  ISINProto ISIN = 2;
  MoneyProto new_price = 3;
  InstrumentTypeProto instrument_type = 4;
}

message CurrencyDepositedIntegrationEvent {
  PortfolioIdProto portfolio_id = 1;
  CurrencyIdProto currency_id = 2;
  DecimalProto Amount = 3;
}

message DepositInvestedIntegrationEvent {
  DepositIdProto deposit_id = 1;
  MoneyProto Investment = 2;
}

message DepositWithdrawalIntegrationEvent {
  DepositIdProto deposit_id = 1;
  MoneyProto Withdraw = 2;
}